--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,5 @@ requires-python = "==3.12.10"
 dependencies = [
     "black>=25.1.0",
     "pyside6==6.9.0",
+    "pyside6-verticalqtabwidget>=0.0.3",
 ]
