--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = "==3.12.10"
 dependencies = [
     "black>=25.1.0",
+    "google-genai>=1.19.0",
     "pyside6==6.9.0",
 ]
